infrastructure/istio/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection: disabled
    name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-gateway
  labels:
    istio-injection: enabled
    name: istio-gateway
